# HanserDownloader

./: .gitignore  .pre-commit-config.yaml  README.md  download_pdfs.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yaml  lint.yaml
tests/: Big Data in der Praxis.html  __init__.py  requirements.txt  test_download_pdfs.py
